--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
      <head>
           <title>Cubos Magicos</title>
+          <link rel="stylesheet" href="style.css">
      <head>
    
   <body>
@@ -14,5 +15,4 @@
     <header>
     <h1 Class="titulo principal">Loja de Cubos Magicos</h1>
 
-  <p>clique aqui</p>
  
