--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
           <link rel="stylesheet" href="style.css">
      <head>
    
+  
   <body>
+      <img scr="D_NQ_NP_729245-MLB32354313431_092019-O.jpg" class=D_NQ_NP_729245-MLB32354313431_092019-O">
+
       <h1>Cubos Magicos</h1>
 <p>Essa loja tem todos os tipos de cubos que voces quiserem</p>
   <body>
@@ -14,5 +17,4 @@
     <body>
     <header>
     <h1 Class="titulo principal">Loja de Cubos Magicos</h1>
-
  
